--- a/index.html
+++ b/index.html
@@ -29,38 +29,27 @@
       rel="stylesheet"
       type="text/css"
     />
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-      
-      .garamond {
-        font-family: "EB Garamond", serif;
-      }
-
-      .poppins {
-        font-family: "Poppins", sans-serif;
-      }
-
-      .dark-small-text {
-        color: #707070;
-        text-align: center;
-        font-family: Poppins;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 26px;
-      }
-
-      .dark-heading {
-        color: #414040;
-        text-align: center;
-        font-family: "EB Garamond";
-        font-size: 40px;
-        font-weight: 800;
-      }
-    </style>
+    <!-- custom css  -->
+    <link rel="stylesheet" href="css/legal-solution.css">
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <!-- navbar  -->
+       <nav class="flex gap-4 justify-between lg:mx-40 items-center lg:flex-row flex-col mt-16">
+          <div>
+            <img src="./images/logo2.png" alt="">
+          </div>
+            <ul class="flex lg:flex-row flex-col gap-7 items-center">
+              <li><a href="#">Home <i class="fa-solid fa-chevron-right"></i> </a></li>
+              <li><a href="#">Service <i class="fa-solid fa-chevron-right"></i> </a></li>
+              <li><a href="#">Cases <i class="fa-solid fa-chevron-right"></i> </a></li>
+              <li><a href="#">Blog <i class="fa-solid fa-chevron-right"></i> </a></li>
+              <li><a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i> </a></li>
+              <li class="lg:ml-20"><a href=""><button class="btn bg-[#B68C5A] text-white hover:bg-[#a07b4f]">Free Consultation</button></a></li>
+            </ul>
+       </nav>
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
