--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <link rel="stylesheet" href="css/legal-solution.css">
   </head>
   <body>
-    <header>
+    <header class="lg:mx-40 mb-20">
       <!-- navbar  -->
-       <nav class="flex gap-4 justify-between lg:mx-40 items-center lg:flex-row flex-col mt-16">
+       <nav class="flex gap-4 justify-between items-center lg:flex-row flex-col mt-16 mb-10">
           <div>
             <img src="./images/logo2.png" alt="">
           </div>
-            <ul class="flex lg:flex-row flex-col gap-7 items-center">
+            <ul class="flex lg:flex-row flex-col gap-7 items-center dark-small-text">
               <li><a href="#">Home <i class="fa-solid fa-chevron-right"></i> </a></li>
               <li><a href="#">Service <i class="fa-solid fa-chevron-right"></i> </a></li>
               <li><a href="#">Cases <i class="fa-solid fa-chevron-right"></i> </a></li>
@@ -48,8 +48,306 @@
               <li class="lg:ml-20"><a href=""><button class="btn bg-[#B68C5A] text-white hover:bg-[#a07b4f]">Free Consultation</button></a></li>
             </ul>
        </nav>
+       <!-- hero -->
+        <div class="hero min-h-screen" style="background-image: url(images/banner.png);">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-[80%] flex flex-col items-center">
+              <h1 class="mb-5 font-bold garamond text-7xl">We Provide Effective Legal Solutions</h1>
+              <p class="mb-5 dark-small-text text-gray-200">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+              <div class="form-control">
+                <div>
+                  <input type="text" placeholder="Search your services" class="input input-bordered text-gray-700" />
+                  <button class="btn bg-[#B68C5A] text-white hover:bg-[#967349]">Search</button>
+                </div>
+              </div>
+          
+            </div>
+          </div>
+        </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <!-- legal practice area  -->
+      <section class="lg:mx-40 mb-20">
+        <h1 class="dark-heading mb-6">The Legal Practice Area</h1>
+        <p class="dark-small-text max-w-[714px] mx-auto mb-16">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+         <!-- cards container  -->
+         <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-7">
+            <!-- card item - 1  -->
+            <div class="card border-solid border-2 border-[#b68d5a69]">
+              <figure class="px-10 pt-10">
+                <img src="/images/business.png" alt="Business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="dark-heading text-3xl">Business Law</h2>
+                <p class="dark-small-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button class="btn bg-[#B68C5A] rounded-full text-white hover:bg-[#a07949]"><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+            </div>
+            <!-- card item - 2  -->
+            <div class="card border-solid border-2 border-[#b68d5a69]">
+              <figure class="px-10 pt-10">
+                <img src="/images/criminal.png" alt="Business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="dark-heading text-3xl">Criminal Law</h2>
+                <p class="dark-small-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button class="btn bg-[#B68C5A] rounded-full text-white hover:bg-[#a07949]"><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+            </div>
+            <!-- card item - 3  -->
+            <div class="card border-solid border-2 border-[#b68d5a69]">
+              <figure class="px-10 pt-10">
+                <img src="/images/child.png" alt="Business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="dark-heading text-3xl">Child Support</h2>
+                <p class="dark-small-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button class="btn bg-[#B68C5A] rounded-full text-white hover:bg-[#a07949]"><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+            </div>
+            <!-- card item - 4  -->
+            <div class="card border-solid border-2 border-[#b68d5a69]">
+              <figure class="px-10 pt-10">
+                <img src="/images/education.png" alt="Business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="dark-heading text-3xl">Education Law</h2>
+                <p class="dark-small-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button class="btn bg-[#B68C5A] rounded-full text-white hover:bg-[#a07949]"><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+            </div>
+            <!-- card item - 5  -->
+            <div class="card border-solid border-2 border-[#b68d5a69]">
+              <figure class="px-10 pt-10">
+                <img src="/images/divorce.png" alt="Business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="dark-heading text-3xl">Divorce Law</h2>
+                <p class="dark-small-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button class="btn bg-[#B68C5A] rounded-full text-white hover:bg-[#a07949]"><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+            </div>
+            <!-- card item - 6  -->
+            <div class="card border-solid border-2 border-[#b68d5a69]">
+              <figure class="px-10 pt-10">
+                <img src="/images/tax.png" alt="Business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="dark-heading text-3xl">Tax Law</h2>
+                <p class="dark-small-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button class="btn bg-[#B68C5A] rounded-full text-white hover:bg-[#a07949]"><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+              </div>
+            </div>
+         </div>
+      </section>
+      <!-- what our client say  -->
+      <section class="lg:mx-40 mb-20">
+        <h1 class="dark-heading mb-2">What Our Client Say</h1>
+        <p class="dark-small-text max-w-[714px] mx-auto mb-16">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+        <!-- carousel item  -->
+        <div class="carousel w-full">
+          <div id="slide1" class="carousel-item relative w-full">
+            <div class="hero min-h-screen" style="background-image: url('./images/slider-1.jpg');">
+              <div class="hero-overlay bg-opacity-60"></div>
+              <div class="hero-content text-center text-neutral-content">
+                <div class="max-w-md">
+                  <h3 class="mb-5 text-2xl font-bold">Awlad Hossain</h3>
+                  <h4>UI Designer</h4>
+                  <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                </div>
+              </div>
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide4" class="btn btn-circle">❮</a> 
+              <a href="#slide2" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide2" class="carousel-item relative w-full">
+            <div class="hero min-h-screen" style="background-image: url('images/slider-2.jpg');">
+              <div class="hero-overlay bg-opacity-60"></div>
+              <div class="hero-content text-center text-neutral-content">
+                <div class="max-w-md">
+                  <h3 class="mb-5 text-2xl font-bold">Awlad Hossain</h3>
+                  <h4>UI Designer</h4>
+                  <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                </div>
+              </div>
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide1" class="btn btn-circle">❮</a> 
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide3" class="carousel-item relative w-full">
+            <div class="hero min-h-screen" style="background-image: url('images/slider-3.jpg');">
+              <div class="hero-overlay bg-opacity-60"></div>
+              <div class="hero-content text-center text-neutral-content">
+                <div class="max-w-md">
+                  <h3 class="mb-5 text-2xl font-bold">Awlad Hossain</h3>
+                  <h4>UI Designer</h4>
+                  <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                </div>
+              </div>
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide2" class="btn btn-circle">❮</a> 
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+        </div>
+      </section>
+      <!-- FAQs Section  -->
+      <section class="lg:mx-40">
+        <h1 class="dark-heading mb-2">Frequently Asked Any Questions</h1>
+        <p class="dark-small-text max-w-[714px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        <!-- faq -->
+        <div class="hero min-h-screen">
+          <div class="hero-content flex-col lg:flex-row-reverse gap-7">
+            <div class="flex-1">
+              <img src="/images/faq.png" class="max-w-sm rounded-lg" />
+            </div>
+            <!-- accordion  -->
+            <div class="flex-1 space-y-7">
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" checked="checked" /> 
+                <div class="collapse-title text-xl font-medium">
+                  Are application fee waivers available?
+                </div>
+                <div class="collapse-content"> 
+                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" /> 
+                <div class="collapse-title text-xl font-medium">
+                  Are application fee waivers available?
+                </div>
+                <div class="collapse-content"> 
+                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" /> 
+                <div class="collapse-title text-xl font-medium">
+                  Are application fee waivers available?
+                </div>
+                <div class="collapse-content"> 
+                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" /> 
+                <div class="collapse-title text-xl font-medium">
+                  Are application fee waivers available?
+                </div>
+                <div class="collapse-content"> 
+                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- contact us section  -->
+      <section class="lg:mx-40 mb-20">
+        <h1 class="dark-heading mb-2">Contact With Us</h1>
+        <p class="dark-small-text max-w-[714px] mx-auto mb-16">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+        <!-- hero  -->
+        <div class="hero">
+          <div class="hero-content flex-col lg:flex-row">
+            <div class="grid lg:grid-cols-2 grid-cols-1 gap-1 text-center flex-1">
+               <div class="bg-gray-200 p-10 border-2 border-solid border-gray-300">
+                <i class="fa-solid fa-location-dot"></i>
+                <h3>Address</h3>
+                <p>A108 Adam Street, New York, NY 535022</p>
+               </div>
+               <div class="bg-gray-200 p-10 border-2 border-solid border-gray-300">
+                <i class="fa-solid fa-location-dot"></i>
+                <h3>Address</h3>
+                <p>A108 Adam Street, New York, NY 535022</p>
+               </div>
+               <div class="bg-gray-200 p-10 border-2 border-solid border-gray-300">
+                <i class="fa-solid fa-location-dot"></i>
+                <h3>Address</h3>
+                <p>A108 Adam Street, New York, NY 535022</p>
+               </div>
+               <div class="bg-gray-200 p-10 border-2 border-solid border-gray-300">
+                <i class="fa-solid fa-location-dot"></i>
+                <h3>Address</h3>
+                <p>A108 Adam Street, New York, NY 535022</p>
+               </div>
+            </div>
+            <div class="flex-1">
+              <form>
+                <input type="text" placeholder="Your Name" class="input input-bordered w-full mb-6 bg-gray-200" /> <br>
+                <input type="email" placeholder="Your Email" class="input input-bordered w-full mb-6 bg-gray-200" /> <br>
+                <input type="text" placeholder="Subject" class="input input-bordered w-full mb-6 bg-gray-200" /> <br>
+                <textarea class="textarea textarea-bordered w-full bg-gray-200" placeholder="Your Message"></textarea> <br>
+                <button class="btn bg-[#B68C5A] text-white w-full hover:bg-[#B68C5A]">Send Message</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- footer section  -->
+    <footer class="footer p-10 bg-[#111] text-white py-32">
+      <div>
+        <span class="font-extrabold text-2xl">Justice</span> 
+        <p class="max-w-[259px] dark-small-text text-left">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+      </div> 
+      <div class="dark-small-text">
+        <span class="font-extrabold text-2xl text-white">Usefull Link</span> 
+        <a class="link link-hover">Home</a> 
+        <a class="link link-hover">About Us</a> 
+        <a class="link link-hover">Cases</a> 
+        <a class="link link-hover">Blog</a>
+        <a class="link link-hover">Contact Us</a>
+      </div> 
+      <div class="dark-small-text">
+        <span class="font-extrabold text-2xl text-white">Contact Now</span> 
+        <a class="link link-hover">
+         555 4th 5t NW, Washington
+         <br>
+         DC 20530, United States
+        </a> 
+        <a class="link link-hover">
+          +88 01750 000 000 <br>
+          +88 01750 000 000
+        </a> 
+        <a class="link link-hover">
+          info@gmail.com <br>
+          info@gmail.com
+        </a> 
+      </div> 
+      <div>
+        <span class="font-extrabold text-2xl">Subscribe</span> 
+        <div class="form-control w-80">
+          <label class="label">
+            <span class="label-text text-gray-500 max-w-[217px] mb-6">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</span>
+          </label> 
+          <div class="relative">
+            <input type="text" placeholder="Email Address" class="input input-bordered w-[100%] w-full lg:pr-16 text-gray-600" /> 
+            <button class="btn bg-[#B68C5A] absolute top-0 right-0 rounded-l-none text-white hover:bg-[#ac8453]"><i class="fa-solid fa-location-arrow"></i></button>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
